# smart-city-bq-traffic-api

./: .env.example  .gitignore  CONTEXT.md  GEMINI.md  README.md  RULES.md  main.py  pyproject.toml  vercel.json
.cursor/: rules.mdc
.github/workflows/: ruff.yml
app/: main.py
app/auth/models/: dtos.py  oauth.py  oauth_google.py
app/auth/routes/: auth.py
app/auth/services/: auth_service.py  google_auth_service.py  microsoft_auth_service.py
app/charts/models/: charts.py
app/charts/routes/: charts.py
app/core/: dependencies.py  exceptions.py  settings.py  validations.py
app/core/database/: connection.py  redis.py
app/core/database/mongo/: mongo.py
app/core/database/repositories/: location_repository_impl.py  module_repository_impl.py  module_role_repository_impl.py  role_repository_impl.py  user_repository_impl.py  user_role_repository_impl.py
app/core/email/models/: email.py
app/core/email/services/: email_service.py
app/core/models/: analysis_response.py  base.py  locations.py  module.py  module_role.py  role.py  user.py  user_role.py
app/core/repositories/: location_repository.py  module_repository.py  module_role_repository.py  role_repository.py  user_repository.py  user_role_repository.py
app/core/security/: encryption_service.py  jwt_service.py
app/geo/models/: geo_info_service_models.py
app/geo/routes/: geo.py
app/geo/services/: geo_info_service.py
app/health/: health.py
app/iam/dtos/: role_with_modules.py  user_with_roles.py
app/iam/routes/: module.py  role.py  user.py
app/iam/services/: module_role_service.py  module_service.py  role_service.py  user_role_service.py  user_service.py
app/iam/usecases/: create_role.py  create_user.py  get_roles_with_modules.py  get_user_with_modules.py  get_users_with_roles.py  update_role.py  update_user.py
app/metrics/models/: models.py
app/traffic/models/: intersection.py
app/traffic/routes/: intersection.py  location.py
app/traffic/services/: location_service.py
src/: run.py
src/app/: main.py
src/app/auth/models/: user.py
src/app/auth/routes/: auth.py
src/app/auth/services/: auth_service.py
src/app/core/: dependencies.py  exceptions.py  jwt_service.py  security.py  settings.py
src/app/core/database/: connection.py
src/app/core/models/: base.py  module.py  module_role.py  user.py  user_role.py
src/app/core/repositories/: user_repository.py
src/app/core/security/: encryption_service.py  jwt_service.py  security.py
tests/: test_intersection.py
(+7 files in other folders)
